test_suite5/ALAN/test_suite/alan-2022-examples/failing/005850_mutation.alan
source A begin leave 1 < else 32662 end
